# md-wiki-rust

./: .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: init.sql
backend/src/: config.rs  db.rs  error.rs  git_ops.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/db/: documents.rs  mod.rs  schema.sql  tags.rs  users.rs
backend/src/handlers/: auth.rs  document.rs  metadata.rs  mod.rs
backend/src/models/: document.rs  mod.rs  user.rs
backend/src/routes/: mod.rs
docs/: API.md  DEVELOPMENT.md  SETUP.md
docs/API/: README.md
docs/BACKEND/: README.md
docs/DEVELOPMENT/: README.md
docs/DOCKER/: README.md
docs/SETUP/: README.md
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.tauri-dev  index.html  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: DocumentEditor.jsx  DocumentHistory.jsx  DocumentList.jsx  DocumentVersionViewer.jsx  DocumentViewer.jsx  MetadataEditor.jsx  RecentDocuments.jsx  SearchBar.jsx  SearchResults.jsx  TagManager.jsx
