[package]
name = "md-wiki-rust-backend"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "Backend for Markdown Wiki built with Rust"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Markdown
pulldown-cmark = "0.9"

# Git integration
git2 = "0.18"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0" 