[package]
name = "md-wiki-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
git2 = "0.18"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
dotenv = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio-rusqlite = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = { version = "0.12", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"