[package]
name = "md-wiki-rust"
version = "0.1.0"
description = "A Markdown Wiki built with Rust and Tauri"
authors = [""]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "http-all", "fs-read-file", "fs-write-file", "fs-read-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] 
